DATAGRAPH-1422 - Fix anchors in documentation.

--- a/etc/jqassistant/api.adoc
+++ b/etc/jqassistant/api.adoc
@@ -1,6 +1,7 @@
 [[api:Default]]
 [role=group,includesConstraints="api:*"]
 
+[[api:api-general-considerations]]
 === General considerations
 
 We use https://github.com/apiguardian-team/apiguardian[@API Guardian] to keep track of what we expose as public or internal API.
@@ -37,6 +38,7 @@ MERGE (c)-[:IS_PART_OF]->(a)
 RETURN c,a
 ----
 
+[[api:api-internal-api]]
 === Internal API
 
 See ADR-003.
