--- a/src/main/asciidoc/appendix/build.adoc
+++ b/src/main/asciidoc/appendix/build.adoc
@@ -1,6 +1,7 @@
 [[building-SDN]]
 = Building Spring Data Neo4j
 
+[[building-SDN.requirements]]
 == Requirements
 
 * JDK 8+ (Can be https://openjdk.java.net[OpenJDK] or https://www.oracle.com/technetwork/java/index.html[Oracle JDK])
@@ -9,6 +10,7 @@
 ** running locally
 ** or indirectly via https://www.testcontainers.org[Testcontainers] and https://www.docker.com[Docker]
 
+[[building-SDN.jdk.version]]
 === About the JDK version
 
 Choosing JDK 8 is a decision influenced by various aspects
@@ -18,6 +20,7 @@ Spring Data commons baseline is still JDK 8 and so is Spring Framework's baselin
 Thus, it is only natural to keep the JDK 8 baseline.
 * While there is an increase of projects started with JDK 11 (which is Oracle's current LTS release of Java), many existing projects are still on JDK 8. We don't want to lose them as users right from the start.
 
+[[building-SDN.running-the-build]]
 == Running the build
 
 The following sections are alternatives and roughly sorted by increased effort.
@@ -44,8 +47,10 @@ Java(TM) SE Runtime Environment (build 12.0.1+12)
 Java HotSpot(TM) 64-Bit Server VM (build 12.0.1+12, mixed mode, sharing)
 ----
 
+[[building-SDN.docker]]
 === With Docker installed
 
+[[building-SDN.docker.default-image]]
 ==== Using the default image
 
 If you don't have https://en.wikipedia.org/wiki/Docker_(software)[Docker] installed, head over to https://www.docker.com/products/docker-desktop[Docker Desktop].
@@ -71,6 +76,7 @@ $ mvnw.cmd clean verify
 
 The output should be similar.
 
+[[building-SDN.docker.another-image]]
 ==== Using another image
 
 The image version to use can be configured through an environmental variable like this:
@@ -86,6 +92,7 @@ Here we are using 3.5.11 enterprise and also accept the license agreement.
 
 Consult your operating system or shell manual on how to define environment variables if specifying them inline does not work for you.
 
+[[building-SDN.local-database]]
 === Against a locally running database
 
 WARNING: Running against a locally running database *will* erase its complete content.
@@ -107,6 +114,7 @@ After that, you can run a complete build by specifying the local `bolt` URL:
 $ SDN_NEO4J_URL=bolt://localhost:7687 SDN_NEO4J_PASSWORD=secret ./mvnw clean verify
 ----
 
+[[building-SDN.environment-variables]]
 == Summary of environment variables controlling the build
 
 [cols="3,1,3",options="header"]
@@ -136,6 +144,7 @@ We use this a lot during development.
 
 NOTE: You need to set both `SDN_NEO4J_URL` and `SDN_NEO4J_PASSWORD` to use a local instance.
 
+[[building-SDN.checkstyle-and-co]]
 == Checkstyle and friends
 
 There is no quality gate in place at the moment to ensure that the code/test ratio stays as is, but please consider adding tests to your contributions.
@@ -143,6 +152,7 @@ There is no quality gate in place at the moment to ensure that the code/test rat
 We have some rather mild checkstyle rules in place, enforcing more or less default Java formatting rules.
 Your build will break on formatting errors or something like unused imports.
 
+[[building-SDN.jqassistant]]
 === jQAssistant
 
 We also use https://jqassistant.org[jQAssistant], a Neo4j-based tool, to verify some aspects of our architecture.
@@ -150,6 +160,7 @@ The rules are described with Cypher and your build will break when they are viol
 
 include::../../../../etc/jqassistant/index.adoc[leveloffset=4]
 
+[[building-SDN.jqassistant.database]]
 ==== Accessing the jQAssistant database
 
 jQAssistant uses Neo4j to store information about a project.
