--- a/src/main/asciidoc/faq/faq.adoc
+++ b/src/main/asciidoc/faq/faq.adoc
@@ -176,14 +176,15 @@ If this is not feasible for any reason, you can either add
 
 While you don't have to provide anything else apart a `Pageable` as a parameter on derived finder methods
 that return a `Page<T>` or a `Slice<T>`, you must prepare your custom query to handle the pageable.
-<<page-and-slice-examples>> gives you an overview about what's needed.
+<<custom-queries-with-page-and-slice-examples>> gives you an overview about what's needed.
 
-[[page-and-slice-examples]]
+[[custom-queries-with-page-and-slice-examples]]
 [source,java]
 .Pages and Slices
 ----
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.neo4j.repository.Neo4jRepository;import org.springframework.data.neo4j.repository.query.Query;
+import org.springframework.data.neo4j.repository.Neo4jRepository;
+import org.springframework.data.neo4j.repository.query.Query;
 
 public interface MyPersonRepository extends Neo4jRepository<Person, Long> {
 
@@ -238,6 +239,54 @@ The SpEL blocked starts with `:#{` and than refers to the given `String` paramet
 Don't confuse this with the above Cypher syntax!
 The SpEL expression concatenates both parameters into one single value that is eventually passed on to the <<neo4j-client>>.
 The SpEL block ends with `}`.
+
+SpEL also solves two additional problems. We provide two extensions that allow to pass in a `Sort` object into custom queries.
+Remember <<custom-queries-with-page-and-slice-examples>> from <<faq.custom-queries,custom queries>>?
+With the `orderBy` extension you can pass in a `Pageable` with a dynamic sort to a custom query:
+
+[[custom-queries-with-spel-extensions]]
+[source,java]
+.orderBy-Extension
+----
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.neo4j.repository.Neo4jRepository;
+import org.springframework.data.neo4j.repository.query.Query;
+
+public interface MyPersonRepository extends Neo4jRepository<Person, Long> {
+
+    @Query(""
+        + "MATCH (n:Person) WHERE n.name = $name RETURN n "
+        + ":#{orderBy(#pageable)} SKIP $skip LIMIT $limit" // <.>
+    )
+    Slice<Person> findSliceByName(String name, Pageable pageable);
+
+    @Query(""
+        + "MATCH (n:Person) WHERE n.name = $name RETURN n :#{orderBy(#sort)}" // <.>
+    )
+    List<Person> findAllByName(String name, Sort sort);
+}
+----
+<.> A `Pageable` has always the name `pageable` inside the SpEL context.
+<.> A `Sort` has always the name `sort` inside the SpEL context.
+
+The `literal` extension can be used to make things like labels or relationship-types "dynamic" in custom queries.
+Neither labels nor relationship types can be parameterized in Cypher, so they must be given literal.
+
+[source,java]
+.literal-Extension
+----
+interface BaseClassRepository extends Neo4jRepository<BaseClass, Long> {
+
+    @Query("MATCH (n:`:#{literal(#label)}`) RETURN n") // <.>
+    List<Inheritance.BaseClass> findByLabel(String label);
+}
+----
+<.> The `literal` extension will be replaced with the literal value of the evaluate parameter.
+    Here it has been used to match dynamically on a Label.
+    If you pass in `SomeLabel` as a parameter to the method, `MATCH (n:``SomeLabel``) RETURN n`
+    will be generated. Ticks have been added to correctly escape values. SDN won't do this
+    for you as this is probably not what you want in all cases.
 
 [[faq.entities.auditing]]
 == How do I audit entities?
