--- a/src/main/asciidoc/faq/faq.adoc
+++ b/src/main/asciidoc/faq/faq.adoc
@@ -171,6 +171,175 @@ The Spring Boot Maven and Gradle plugins do this automatically for you.
 If this is not feasible for any reason, you can either add
 `@Param`  and specify the name explicitly or use the parameters index.
 
+Mapped entitiess (everything with a `@Node`) passed as parameter to a function that is annotated with
+a custom query will be turned into a nested map. The following example represents the structure as Neo4j parameters.
+
+Given are a `Movie`, `Person` and `Actor` classes annotated as shown in <<movie-model, the movie model>>:
+
+[[movie-model]]
+[source,java]
+."Standard" movies model
+----
+@Node
+public final class Movie {
+
+    @Id
+    private final String title;
+
+    @Property("tagline")
+    private final String description;
+
+    @Relationship(value = "ACTED_IN", direction = Direction.INCOMING)
+    private final List<Actor> actors;
+
+    @Relationship(value = "DIRECTED", direction = Direction.INCOMING)
+    private final List<Person> directors;
+}
+
+@Node
+public final class Person {
+
+    @Id @GeneratedValue
+    private final Long id;
+
+    private final String name;
+
+    private Integer born;
+
+    @Relationship("REVIEWED")
+    private List<Movie> reviewed = new ArrayList<>();
+}
+
+@RelationshipProperties
+public final class Actor {
+
+    @TargetNode
+    private final Person person;
+
+    private final List<String> roles;
+}
+
+interface MovieRepository extends Neo4jRepository<Movie, String> {
+
+    @Query("MATCH (m:Movie {title: $movie.__id__})\n"
+           + "MATCH (m) <- [r:DIRECTED|REVIEWED|ACTED_IN] - (p:Person)\n"
+           + "return m, collect(r), collect(p)")
+    Movie findByMovie(@Param("movie") Movie movie);
+}
+----
+
+Passing an instance of `Movie` to the repository method above, will generate the following Neo4j map parameter:
+
+[source,json]
+----
+{
+  "movie": {
+    "__labels__": [
+      "Movie"
+    ],
+    "__id__": "The Da Vinci Code",
+    "__properties__": {
+      "ACTED_IN": [
+        {
+          "__properties__": {
+            "roles": [
+              "Sophie Neveu"
+            ]
+          },
+          "__target__": {
+            "__labels__": [
+              "Person"
+            ],
+            "__id__": 402,
+            "__properties__": {
+              "name": "Audrey Tautou",
+              "born": 1976
+            }
+          }
+        },
+        {
+          "__properties__": {
+            "roles": [
+              "Sir Leight Teabing"
+            ]
+          },
+          "__target__": {
+            "__labels__": [
+              "Person"
+            ],
+            "__id__": 401,
+            "__properties__": {
+              "name": "Ian McKellen",
+              "born": 1939
+            }
+          }
+        },
+        {
+          "__properties__": {
+            "roles": [
+              "Dr. Robert Langdon"
+            ]
+          },
+          "__target__": {
+            "__labels__": [
+              "Person"
+            ],
+            "__id__": 360,
+            "__properties__": {
+              "name": "Tom Hanks",
+              "born": 1956
+            }
+          }
+        },
+        {
+          "__properties__": {
+            "roles": [
+              "Silas"
+            ]
+          },
+          "__target__": {
+            "__labels__": [
+              "Person"
+            ],
+            "__id__": 403,
+            "__properties__": {
+              "name": "Paul Bettany",
+              "born": 1971
+            }
+          }
+        }
+      ],
+      "DIRECTED": [
+        {
+          "__labels__": [
+            "Person"
+          ],
+          "__id__": 404,
+          "__properties__": {
+            "name": "Ron Howard",
+            "born": 1954
+          }
+        }
+      ],
+      "tagline": "Break The Codes",
+      "released": 2006
+    }
+  }
+}
+----
+
+A node is represented by a map. The map will always contain `__id__`  which is the mapped id property.
+Under `__labels__` all labels, static and dynamic, will be available.
+All properties - and type of relationships - appear in those maps as they would appear in the graph when the entity would
+have been written by SDN.
+Values will have the correct Cypher type and won't need further conversion.
+
+All relationships are lists of maps. Dynamic relationships will be resolved accordingly.
+When an entity has a relationship with the same type to different types of others nodes they will all apear in the same list.
+If you need such a mapping and also have the need to work with those custom parameters, you have to unroll it accordingly.
+One way to do this are correlated subqueries (Neo4j 4.1+ required).
+
+
 [[faq.custom-queries]]
 == How do I use custom queries with repository methods returning `Page<T>` or `Slice<T>`?
 
